--- a/docker/pretrain/Dockerfile
+++ b/docker/pretrain/Dockerfile
@@ -1,72 +1,19 @@
-# Use an official CUDA-enabled Python runtime as a parent image
-FROM nvidia/cuda:12.3.1-devel-ubuntu20.04 as base
+FROM docker.io/asakhare/llava_base as base
 
-ENV DEBIAN_FRONTEND=noninteractive \
-    PYTHONUNBUFFERED=1 \
-    PIP_NO_CACHE_DIR=on
-
-# Set the working directory
-WORKDIR /
-
-RUN apt-get update && \
-    apt-get -y upgrade && \
-    apt-get install -y  \
-            software-properties-common \
-            apt-utils \
-            wget \
-            git
-
-# Install Miniconda
-RUN wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh && \
-    bash Miniconda3-latest-Linux-x86_64.sh -b -p /miniconda -u && \
-    rm Miniconda3-latest-Linux-x86_64.sh
-
-# Activate the Conda environment
-RUN /miniconda/bin/conda create -n llava python=3.10 -y && \
-    echo "conda activate llava" >> /.bashrc
-
-# Stage 2: Install LLaVA and python modules
-FROM base as setup
-
-# Copy LLaVA repo
-RUN mkdir /LLaVA
-COPY . /LLaVA
-
-#ARG LLAVA_COMMIT=9a26bd1435b4ac42c282757f2c16d34226575e96
-#RUN git clone https://github.com/haotian-liu/LLaVA.git && \
-#    cd LLaVA && \
-#    git checkout ${LLAVA_COMMIT}
-
-WORKDIR /LLaVA
-
-# Create data and output directories
-RUN mkdir data && mkdir output
-
-SHELL ["/bin/bash", "--login", "-c"]
-
-RUN source /miniconda/bin/activate llava && \
-    conda install pip && \
-    pip install --upgrade pip && \
-    pip install -e . && \
-    pip install -e ".[train]" && \
-    pip install flash-attn --no-build-isolation
-
-ENV LORA_ENABLE=true \
-    LORA_R=value \
-    LORA_ALPHA=value \
+ENV LORA_ENABLE=True \
+    LORA_R=128 \
+    LORA_ALPHA=256 \
     DEEPSPEED=./scripts/zero2.json \
     MODEL_NAME_OR_PATH=./data/lmsys/vicuna-13b-v1.5 \
     VERSION=plain \
     DATA_PATH=./data/blip_laion_cc_sbu_558k.json \
-    IMAGE_FOLDER=./data/images \
-    VISION_TOWER=./data/openai/clip-vit-large-patch14-336 \
     MM_PROJECTOR_TYPE=mlp2x_gelu \
     TUNE_MM_MLP_ADAPTER=True \
     MM_VISION_SELECT_LAYER=-2 \
     MM_USE_IM_START_END=False \
     MM_USE_IM_PATCH_TOKEN=False \
     BF16=True \
-    OUTPUT_DIR=./outputs \
+    OUTPUT_DIR=./output \
     NUM_TRAIN_EPOCHS=1 \
     PER_DEVICE_TRAIN_BATCH_SIZE=32 \
     PER_DEVICE_EVAL_BATCH_SIZE=4 \
