--- a/docker/finetune/Dockerfile
+++ b/docker/finetune/Dockerfile
@@ -7,12 +7,12 @@ ENV LORA_ENABLE=True \
     LORA_ALPHA=256 \
     MM_PROJECTOR_LR=2e-5 \
     DEEPSPEED=./scripts/zero3.json \
-    MODEL_NAME_OR_PATH=.data/lmsys/vicuna-13b-v1.5 \
+    MODEL_NAME_OR_PATH=./models/lmsys/vicuna-13b-v1.5 \
     VERSION=v1 \
-    DATA_PATH=./data/llava_v1_5_mix665k.json \
-    IMAGE_FOLDER=./data \
+    DATA_PATH=./finetune/llava_v1_5_mix665k.json \
+    IMAGE_FOLDER=./finetune \
     VISION_TOWER=openai/clip-vit-large-patch14-336 \
-    PRETRAIN_MM_MLP_ADAPTER=./data/llava-v1.5-13b/mm_projector.bin \
+    PRETRAIN_MM_MLP_ADAPTER=./models/llava-v1.5-13b/mm_projector.bin \
     MM_PROJECTOR_TYPE=mlp2x_gelu \
     MM_VISION_SELECT_LAYER=-2 \
     MM_USE_IM_START_END=False \
